Fixed VT issues

The root cause of VT related crashes appears to be the implicit
ungrabbing of xinput devices.

(see https://gitlab.freedesktop.org/xorg/lib/libxi/-/issues/11)